--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,28 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>First Layout</title>
+</head>
+<body>
+    <header>
+
+    </header>
+
+    <div class="left-col">
+
+    </div>
+
+    <div class="right-col">
+
+    </div>
+
+    <footer>
+
+    </footer>
+    
+</body>
+</html>
