--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,27 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./index.css">
+    <title>Second Layout</title>
+</head>
+<body>
+    <div class="box-1">
+        <div class="rectangle-1"></div>
+        <div class="rectangle-2"></div>
+        <div class="circle"></div>
+    </div>
+    
+    <div class="box-2">
+        <div class="rectangle-3"></div>
+    </div>
+
+    <div class="box-3">
+        <div class="inside-box">
+            <p>HELLO<br>FRIENDS</p>
+        </div>
+    </div>
+</body>
+</html>
