--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,29 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./index.css">
+    <title>Third Layout</title>
+</head>
+<body>
+    <div class="row-1">
+        <div class="square"></div>
+    </div>
+    <div class="row-2">
+        <div class="content">
+            Consider hiding the status bar-and all other app UI-while people are actively
+            viewing full-screen media. If you hide the status bar, be sure to let people retrive
+            it (and the appropriate app UI) with a single tap. Unless you have a comelling
+            reason to do so, avoid defining a custom gesture to redisplay the status bar
+            because users are unlikely to discover such a gesture or to remember it.
+        </div>
+    </div>
+    <div class="row-3"></div>
+    <div class="row-4"></div>
+    <div class="row-5"></div>
+    <div class="row-6"></div>
+
+</body>
+</html>
